# tdbs-dask

./: .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
pbmc-small/ms/RNA/__group/: __1732217855530_1732217855530_0c45463ac3a2fe4fde03c01f822fa5af_2
pbmc-small/ms/RNA/obsm/__group/: __1732217855580_1732217855580_760150a0e9c24d82334aca58a714076a_2
pbmc-small/ms/RNA/obsp/__group/: __1732217855614_1732217855614_51f015d1147ee7e6f25bdc6962a0a863_2
pbmc-small/ms/RNA/uns/__group/: __1732217855533_1732217855533_470a6ba7fdba385adfc52b96318409dd_2
pbmc-small/ms/RNA/var/__schema/: __1732217855556_1732217855556_5df6e4dbde40a0dd334047403068376b
pbmc-small/ms/RNA/varm/__group/: __1732217855602_1732217855602_568f85403cc2f53b2a89d3955fa90847_2
pbmc-small/ms/__group/: __1732217855529_1732217855529_0c45463ba1c72875b10a999f8565f985_2
pbmc-small/ms/raw/__group/: __1732217855633_1732217855633_0c454638484f8d25e2c4bbdbc6953199_2
pbmc-small/obs/__fragments/__1732217855512_1732217855512_636b60283a88c6dfa946ca5fad550828_22/: __fragment_metadata.tdb  a3_validity.tdb  a6.tdb
pbmc-small/obs/__schema/: __1732217855511_1732217855511_5b2ee6a493c8f8e1288115a363282464  __1732217855516_1732217855516_79440f3ee41bb91a8b921ada1ad0e074
pbmc-small/obs/__schema/__enumerations/: __5b2ee6a368eb26437fe55ff0d5cc34e6_0  __79440f3d63b21431ac6f4c8d26d79771_0
tests/: test_hvg.py  test_outgest_census.py  test_transpile_dask.py
tiledb_dask/: main.py
tiledbsoma_dask/: utils.py
tiledbsoma_dask/cli/: base.py  hvg.py  main.py
(+30 files in other folders)
