[project]
name = "tiledbsoma-dask"
version = "0.0.1"
dependencies = [
    "anndata",
    "cellxgene-census",
    "click",
    "dask[array]",
    "numba",
    "scanpy",
    "scipy",
    "tiledb",
    "tiledbsoma",
]

[project.scripts]
tdbs-dask = "tiledbsoma_dask.cli.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
