[project]
name = "tiledbsoma-dask"
version = "0.0.1"
dependencies = [
    "anndata",
    "cellxgene-census",
    "click",
    "dask[array]==2024.8.0",
    "numba",
    "scanpy",
    "scipy",
    "tiledb",
    "tiledb-cloud",
    "tiledbsoma @ git+https://github.com/single-cell-data/TileDB-SOMA@rw/ad-dask#subdirectory=apis/python",
]

[project.optional-dependencies]
dev = [
    "bmdf",
    "pytest",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
